[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Env/LegacyEnv.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/GameWorld/WorldInterfaceMock.gd" type="Script" id=2]
[ext_resource path="res://scripts/GameWorld/LoadLegacyObjects.gd" type="Script" id=3]
[ext_resource path="res://scripts/JSONSerialiser.gd" type="Script" id=4]
[ext_resource path="res://Entities/Editor/Camera3D/EditorCamera.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/3DCursor.gd" type="Script" id=6]
[ext_resource path="res://scripts/PencilCursor.gd" type="Script" id=7]
[ext_resource path="res://scripts/PlacementCursor.gd" type="Script" id=8]
[ext_resource path="res://scripts/SelectCursor.gd" type="Script" id=9]
[ext_resource path="res://scripts/CursorBase.gd" type="Script" id=10]
[ext_resource path="res://scripts/PolygonCursor.gd" type="Script" id=11]
[ext_resource path="res://Entities/Editor/PolygonCursor.obj" type="ArrayMesh" id=12]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=13]
[ext_resource path="res://Entities/Editor/EditorGUI.tscn" type="PackedScene" id=14]
[ext_resource path="res://res/txrs/wood256.jpg" type="Texture2D" id=15]
[ext_resource path="res://res/materials/selection.tres" type="Material" id=16]
[ext_resource path="res://Entities/Penguin/Penguin.dae" type="PackedScene" id=17]
[ext_resource path="res://scripts/GameWorld/LegacyWorldLoader.gdns" type="Script" id=18]
[ext_resource path="res://Scenes/Test.gd" type="Script" id=19]
[ext_resource path="res://scripts/GameWorld/GenerateFloor.gdns" type="Script" id=20]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.3
bottom_radius = 0.3
height = 0.1

[sub_resource type="StandardMaterial3D" id=2]
albedo_color = Color( 0.627451, 0.152941, 0.152941, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.4
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="StandardMaterial3D" id=3]
albedo_color = Color( 0.180392, 0.627451, 0.152941, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.4
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="StandardMaterial3D" id=4]
albedo_texture = ExtResource( 15 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )

[sub_resource type="ArrayMesh" id=6]
surfaces/0 = {
"aabb": AABB( -1, 0.02, -1, 2.00001, 1.00005e-05, 2.00001 ),
"array_data": PackedByteArray( 0, 0, 128, 63, 10, 215, 163, 60, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 60, 0, 0, 128, 191, 10, 215, 163, 60, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 128, 63, 10, 215, 163, 60, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 10, 215, 163, 60, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0 ),
"array_index_data": PackedByteArray( 0, 0, 2, 0, 1, 0, 1, 0, 2, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="ArrayMesh" id=7]
surfaces/0 = {
"aabb": AABB( -1, 0.02, -1, 2.00001, 1.00005e-05, 2.00001 ),
"array_data": PackedByteArray( 0, 0, 128, 63, 10, 215, 163, 60, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 60, 0, 0, 128, 191, 10, 215, 163, 60, 0, 0, 128, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 128, 63, 10, 215, 163, 60, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 60, 0, 0, 0, 0, 128, 191, 10, 215, 163, 60, 0, 0, 128, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 0, 0, 0 ),
"array_index_data": PackedByteArray( 0, 0, 2, 0, 1, 0, 1, 0, 2, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[node name="Node3D" type="Node3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00506687, 0.00805092, 0.000213623 )

[node name="Environment" parent="." instance=ExtResource( 1 )]

[node name="WorldInterface" type="Node3D" parent="." groups=["PropertyListener", "ToolChangeListener"]]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.86265e-09, 4.36557e-11 )
script = ExtResource( 2 )

[node name="ObjectLoader" type="Node" parent="WorldInterface"]
script = ExtResource( 3 )

[node name="JSONSerialiser" type="Node" parent="WorldInterface"]
script = ExtResource( 4 )

[node name="EditorCamera" parent="." instance=ExtResource( 5 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 10 )

[node name="3DCursor" type="Node3D" parent="." groups=["ToolChangeListener"]]
script = ExtResource( 6 )

[node name="Pencil" type="Node3D" parent="3DCursor"]
script = ExtResource( 7 )

[node name="WallCursor" type="MeshInstance3D" parent="3DCursor/Pencil"]
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Placement" type="Node3D" parent="3DCursor"]
script = ExtResource( 8 )

[node name="Select" type="Node3D" parent="3DCursor"]
script = ExtResource( 9 )

[node name="None" type="Node3D" parent="3DCursor"]
script = ExtResource( 10 )

[node name="Polygon" type="Node3D" parent="3DCursor"]
script = ExtResource( 11 )

[node name="VertexBase" type="MeshInstance3D" parent="3DCursor/Polygon"]
transform = Transform3D( 0.3, 0, 0, 0, 0.17, 0, 0, 0, 0.3, 0, 0, 0 )
visible = false
mesh = ExtResource( 12 )
material/0 = SubResource( 3 )
material/1 = SubResource( 3 )
material/2 = SubResource( 3 )

[node name="Grid" type="MeshInstance3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
script = ExtResource( 13 )

[node name="TransparentGround" type="MeshInstance3D" parent="Grid"]

[node name="GUI" parent="." instance=ExtResource( 14 )]

[node name="Spatial2" type="Node3D" parent="."]
transform = Transform3D( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.0751307, 6.25, 0.598679 )
visible = false

[node name="MeshInstance3" type="MeshInstance3D" parent="Spatial2"]
transform = Transform3D( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -3.34061, 1.92902, 2.34577 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spatial2/MeshInstance3"]
transform = Transform3D( 1.1, 0, 0, 0, 1, 0, 0, 0, 1.1, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = ExtResource( 16 )

[node name="MeshInstance4" type="MeshInstance3D" parent="Spatial2"]
transform = Transform3D( 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0, 1, -3.34061, 1.92902, 2.34577 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spatial2/MeshInstance4"]
transform = Transform3D( 1.1, 0, 0, 0, 1, 0, 0, 0, 1.1, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance3D" parent="Spatial2"]
transform = Transform3D( 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0, 1, -2.6904, 2.68266, 2.34577 )
mesh = SubResource( 5 )
material/0 = null

[node name="Scene Root" parent="." instance=ExtResource( 17 )]
transform = Transform3D( 25, 0, 0, 0, 25, 0, 0, 0, 25, 2.48929, -0.00473465, 3.46994 )

[node name="LegacyWorldLoader" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Button" type="Button" parent="LegacyWorldLoader"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0526
offset_top = -128.263
offset_right = 149.053
offset_bottom = -92.2631
grow_horizontal = 0
grow_vertical = 0
text = "Run GDNative"
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="LegacyWorldLoader/Button"]

[node name="FloorGenerator" type="Node" parent="."]
script = ExtResource( 20 )

[connection signal="pressed" from="LegacyWorldLoader/Button" to="LegacyWorldLoader/Button" method="_on_Button_pressed"]

[editable path="Scene Root"]
